--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -35,9 +35,9 @@ services:
     restart: unless-stopped
 
   # Next.js Frontend (inols)
-  web:
+  inols_web:
     build: ./inols
-    container_name: ino_frontend
+    container_name: inols_frontend
     expose:
       - "3000"
     env_file:
@@ -57,6 +57,25 @@ services:
     command: npm run dev
     restart: unless-stopped
 
+  # Next.js Frontend (lsapka)
+  lsapka_web:
+    build: ./lsapka
+    container_name: lsapka_frontend
+    expose:
+      - "3001"
+    env_file:
+      - ./lsapka/.env.local
+    depends_on:
+      - api
+    networks:
+      - ino_network
+    volumes:
+      - ./lsapka:/app
+      - /app/node_modules
+      - /app/.next
+    command: npm run dev
+    restart: unless-stopped
+
   # Nginx Reverse Proxy
   nginx:
     image: nginx:alpine
@@ -68,7 +87,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
-      - web
+      - inols_web
+      - lsapka_web
       - api
     networks:
       - ino_network
