--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,18 @@
-# HTTP -> HTTPS redirect
+# HTTP -> HTTPS redirect for ino.lesnaszkolka.org
 server {
     listen 80;
     server_name ino.lesnaszkolka.org;
     return 301 https://$host$request_uri;
 }
 
-# HTTPS Frontend
+# HTTP -> HTTPS redirect for test.lesnaszkolka.org
+server {
+    listen 80;
+    server_name test.lesnaszkolka.org;
+    return 301 https://$host$request_uri;
+}
+
+# HTTPS ino.lesnaszkolka.org (inols)
 server {
     listen 443 ssl;
     server_name ino.lesnaszkolka.org;
@@ -15,9 +22,9 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
-    # Frontend (Next.js)
+    # Frontend (inols Next.js)
     location / {
-        proxy_pass http://web:3000;
+        proxy_pass http://inols_web:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -30,7 +37,7 @@ server {
 
     # Next.js static files
     location /_next/static {
-        proxy_pass http://web:3000;
+        proxy_pass http://inols_web:3000;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header Host $host;
         expires 365d;
@@ -55,5 +62,38 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+# HTTPS test.lesnaszkolka.org (lsapka)
+server {
+    listen 443 ssl;
+    server_name test.lesnaszkolka.org;
+
+    ssl_certificate /etc/letsencrypt/live/test.lesnaszkolka.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/test.lesnaszkolka.org/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # Frontend (lsapka Next.js)
+    location / {
+        proxy_pass http://lsapka_web:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Next.js static files
+    location /_next/static {
+        proxy_pass http://lsapka_web:3001;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Host $host;
+        expires 365d;
+        access_log off;
     }
 } 
