--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,16 +34,17 @@ services:
     env_file:
       - ./backend/.env
 
-  # Next.js Frontend
+  # Next.js Frontend (inols)
   frontend:
     build: .
-    container_name: ino_frontend
+    container_name: inols_frontend
     ports:
-      - "3000:3000"
+      - "3001:3001"
     env_file:
       - .env.local
     environment:
-      NEXTAUTH_URL: http://localhost:3000
+      NEXTAUTH_URL: http://localhost:3001
+      PORT: 3001
     depends_on:
       - api
     networks:
