--- a/nginx.conf
+++ b/nginx.conf
@@ -44,7 +44,20 @@ server {
         access_log off;
     }
 
-    # Backend API
+    # NextAuth endpoints (muszą być obsługiwane przez frontend)
+    location /api/auth/ {
+        proxy_pass http://inols_web:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Backend API (bez auth endpoints)
     location /api/ {
         proxy_pass http://api:8000/;
         proxy_http_version 1.1;
@@ -55,7 +68,7 @@ server {
     }
 
     # Backend endpoints (bez /api/ prefix)
-    location ~ ^/(events|results|auth|health) {
+    location ~ ^/(events|results|health) {
         proxy_pass http://api:8000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
