--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -82,7 +82,8 @@ services:
       - ./lsapka/.env.local
     environment:
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET:-default_secret_change_me}
-      API_BASE_URL: http://localhost:8001
+      API_BASE_URL: https://test.lesnaszkolka.org
+      NEXT_PUBLIC_API_URL: https://test.lesnaszkolka.org
       PORT: 3000
     depends_on:
       - lsapka_api
