--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,63 @@ server {
     return 301 https://$host$request_uri;
 }
 
-# HTTPS ino.lesnaszkolka.org (inols)
+# HTTP -> HTTPS redirect for api.ino.lesnaszkolka.org
+server {
+    listen 80;
+    server_name api.ino.lesnaszkolka.org;
+    return 301 https://$host$request_uri;
+}
+
+# HTTP -> HTTPS redirect for api.lesnaszkolka.org
+server {
+    listen 80;
+    server_name api.lesnaszkolka.org;
+    return 301 https://$host$request_uri;
+}
+
+# HTTPS api.ino.lesnaszkolka.org (inols API)
+server {
+    listen 443 ssl;
+    server_name api.ino.lesnaszkolka.org;
+
+    ssl_certificate /etc/letsencrypt/live/api.ino.lesnaszkolka.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.ino.lesnaszkolka.org/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # Backend API (inols)
+    location / {
+        proxy_pass http://api:8000/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+# HTTPS api.lesnaszkolka.org (lsapka API)
+server {
+    listen 443 ssl;
+    server_name api.lesnaszkolka.org;
+
+    ssl_certificate /etc/letsencrypt/live/api.lesnaszkolka.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.lesnaszkolka.org/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # Backend API (lsapka)
+    location / {
+        proxy_pass http://lsapka_api:8001/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+# HTTPS ino.lesnaszkolka.org (inols frontend)
 server {
     listen 443 ssl;
     server_name ino.lesnaszkolka.org;
@@ -56,29 +112,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
     }
-
-    # Backend API (bez auth endpoints)
-    location /api/ {
-        proxy_pass http://api:8000/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Backend endpoints (bez /api/ prefix)
-    location ~ ^/(events|results|health) {
-        proxy_pass http://api:8000;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
 }
 
-# HTTPS test.lesnaszkolka.org (lsapka)
+# HTTPS test.lesnaszkolka.org (lsapka frontend)
 server {
     listen 443 ssl;
     server_name test.lesnaszkolka.org;
@@ -108,5 +144,18 @@ server {
         proxy_set_header Host $host;
         expires 365d;
         access_log off;
+    }
+
+    # NextAuth endpoints (muszą być obsługiwane przez frontend)
+    location /api/auth/ {
+        proxy_pass http://lsapka:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 } 
