Production domains names

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,10 +5,10 @@ server {
     return 301 https://$host$request_uri;
 }
 
-# HTTP -> HTTPS redirect for test.lesnaszkolka.org
+# HTTP -> HTTPS redirect for lesnaszkolka.org
 server {
     listen 80;
-    server_name test.lesnaszkolka.org;
+    server_name lesnaszkolka.org;
     return 301 https://$host$request_uri;
 }
 
@@ -114,13 +114,13 @@ server {
     }
 }
 
-# HTTPS test.lesnaszkolka.org (lsapka frontend)
+# HTTPS lesnaszkolka.org (lsapka frontend)
 server {
     listen 443 ssl;
-    server_name test.lesnaszkolka.org;
+    server_name lesnaszkolka.org;
 
-    ssl_certificate /etc/letsencrypt/live/test.lesnaszkolka.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/test.lesnaszkolka.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/lesnaszkolka.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/lesnaszkolka.org/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
